stops the title from overlapping on top of the navigation menu on the blog selection page

--- a/css/style.scss
+++ b/css/style.scss
@@ -831,8 +831,8 @@ body, header, nav, ul, li, p, a, h1, h2, h3, h4 {
     }
 
     .blog__title::before {
-        font-size: 13rem;
-        margin-top: -7rem;
+        font-size: 12rem;
+        margin-top: -5rem;
         margin-left: 3rem;
     }
 
